--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "server-only": "^0.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "xterm": "^5.1.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
