--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.473.0",
-    "next": "15.1.5",
+    "next": "^15.3.5",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@next/bundle-analyzer": "^15.3.5",
     "@shadcn/ui": "^0.0.4",
     "@types/node": "^20",
     "@types/react": "^19",
